GNOME Bugzilla – Bug 749996
Blank dialog when removing apps with & in name
Last modified: 2016-02-23 11:52:05 UTC
Created attachment 304110 [details] Screenshot of blank dialog I clicked the Remove button on this crap java management console thing to get rid of it, and got a completely blank dialog. When I click the Remove button on the dialog, it disappears from the list of installed software, but it is not uninstalled. It still appears in search results if I search for it manually, and I can click the remove button in the search results to get back to the blank dialog.
Fixed in 3.18?
Maybe... it doesn't show up in the Installed view at all anymore, so at least it's no longer possible to reproduce.
Sorry, it's not fixed. I'm still running some older machines and get this error on the console: (gnome-software:3780): Gtk-WARNING **: Failed to set text 'OpenJDK 8 Monitoring & Management Console 1.8.0.60-14.b27.fc21.i386 will be removed, and you will have to install it to use it again.' from markup due to error parsing markup: Error on line 1: Entity did not end with a semicolon; most likely you used an ampersand character without intending to start an entity - escape ampersand as & It's g-s latest from master, not an older version, for what it's worth. So that's clearly reproducible with every app which has '&' character inside. Probably there are some other problematic chars.
commit b08d3ffecce5ea98972980b713f73b1129d6110f Author: Richard Hughes <richard@hughsie.com> Date: Tue Feb 23 11:50:10 2016 +0000 Escape markup before showing modal dialogs Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=749996