Escape markup before showing modal dialogs

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=749996